--- a/templates/reflections/basic.html
+++ b/templates/reflections/basic.html
@@ -33,10 +33,10 @@
     <p>End: <span id="end">{{ time_range_end }}</span></p>
 
     <h2>Total Time Spent</h2>
-    <p><span id="total_time">{{ total_time_spent }}</span> seconds</p>
+    <p><span id="total_time">{{ total_time_spent }}</span></p>
 
     <h2>Total Break Duration</h2>
-    <p><span id="total_time_break">{{ total_break_duration }}</span> seconds</p>
+    <p><span id="total_time_break">{{ total_break_duration }}</span></p>
 
     <h2>Summary Groups by Category</h2>
 
